--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 </head>
 <body>
+
+<div>
+    <input onchange="handleChange" placeholder="Введите варианты" />
+    <button onclick="handleAdd">Добавить</button>
+</div>
 <!-- главный блок -->
 <div class="deal-wheel">
     <!-- блок с призами -->
